# matrix-cpp-sdk

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  matrix-cpp-sdk.pc.in
docs/dev/: classes.org
include/matrix/: Client.h  Event.h  EventListener.h  Room.h  RoomMember.h
src/: Client.cpp  Client.h  Event.cpp  Event.h  EventListener.cpp  Homeserver.cpp  Homeserver.h  Logger.cpp  Logger.h  Room.cpp  Room.h  RoomMember.cpp  RoomMember.h  Syncer.cpp  Syncer.h  WebAPI.cpp  WebAPI.h
